Tue Jul 21 16:07:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tracer.rb: toplevel caller exists now.  [ruby-core:24454]

Tue Jul 21 13:36:20 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.[ch] (recvmsg, sendmsg): new functions to support recvmsg/
	  sendmsg like UNIX. these functions are experimental and not tested
	  well. bug reports are welcome.

Tue Jul 21 13:35:21 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (TEST_RUNNABLE): follow r24209.

Tue Jul 21 12:45:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_enable, rb_gc_disable): should return Qtrue/Qfalse.

Tue Jul 21 12:38:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_generic_ivar_memsize): should not remove generic
	  instance variable table.

Mon Jul 20 20:35:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_f_open): add rdoc about specifying ext_enc as *-bom.

Mon Jul 20 19:00:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_dstr_fragments): reduced needless literal.

	* parse.y (xstring, regexp, dsym, literal_concat, evstr2dstr):
	  literal at the top of dstr is no longer needed if it is empty,
	  since concatstrings and toregexp always create new strings.

Mon Jul 20 12:51:39 2009  wanabe  <s.wanabe@gmail.com>

	* lib/matrix.rb (Matrix#rank): revert a part of r20859 to avoid
	  infinite loop.  [Bug #1020]

Mon Jul 20 11:12:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in (TEST_RUNNABLE): tests are no
	  runnable if cross-compiling.

	* common.mk (btest*, test*): ditto.

Mon Jul 20 10:55:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Addrinfo#family_addrinfo): fix a typo in
	  error message.  patch by Nobuhiro IMAI.  [ruby-dev:38828]

Sun Jul 19 22:22:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_to_r): an improvement.

Sun Jul 19 20:41:24 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (make_patterns): do not use \d.
